# FSD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: dam_break.json  dam_break_gen.json  geometry_dam_break.json  test.json  test_gen.json
config/dataset/: ball_drop_geometry.json  ballistic.json  dam_break.json  dam_break_gen.json  obstacles.json  test_gen.json
config/dataset/nerf/: ball.json  dam.json  droplets.json  duck.json  ship.json
config/scenes/: ballistic.json  dam_break.json  droplets.json  duck_tray.json  nerf_ball.json  nerf_duck.json  nerf_scene.json  test_sim.json
config/scenes/nerf/: ball.json  dam.json  duck.json  ship.json
include/: dam_break.hpp  dataset_scene.hpp  fsd_scene.hpp  scene_sampler.hpp  scene_select.hpp  scenes.hpp  test_scene.hpp
include/utils/: coo_tensor_double.hpp  coo_tensor_float.hpp
script/: convert_msgpack.py  find_broken.py  generate_dataset.py  generate_nerf_cameras.py  load_phi.py  make_video.py
src/: ball_drop.cpp  ballistic.cpp  dam_break.cpp  dataset_scene.cpp  droplets.cpp  fsd_scene.cpp  generate_dataset.cpp  main.cpp  nerf_scene.cpp  simulate_scene.cpp  test_scene.cpp
